# adminfoundry

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  adminfoundry_admin_package_gap_analysis.md  adminfoundry_v1_core_extensions_roadmap.md  alembic_shared.ini  alembic_tenant.ini  basic_single.db-shm  basic_single.db-wal  coreAdmin-api.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
adminfoundry/: __init__.py  admin_config.py  app.py  auth.py  auth_provider.py  cache.py  cleanup.py  cli.py  dashboard.py  database.py  dependencies.py  email.py  fixtures.py  i18n.py  login_security.py  main.py  runtime_metrics.py  settings.py  signals.py  storage.py  token_blacklist.py
asterion/: __init__.py
coreAdmin_api/: admin_config.py  auth.py  cli.py  database.py  dependencies.py  main.py  settings.py
docs/: AUDIT_LOGGING.md  DATA_PROCESSING.md  DATA_RETENTION.md  GOVERNANCE.md  PRIVACY.md  THREAT_MODEL.md  architecture.md  deployment.md  feature-index.md  model-admin.md  permission-matrix.md  review-hardening-roadmap.md  roadmap-postgres-tenancy.md  roadmap.md  security.md  shared-responsibility.md  stabilization.md  tenancy.md
memory/: MEMORY.md  feedback_adminfoundry_style.md  project_adminfoundry_v1_refactor.md
tests/: _helpers.py  conftest.py  test_actions.py  test_admin_actions.py  test_admin_contract.py  test_admin_crud.py  test_admin_schema_builder.py  test_admin_ui.py  test_admin_ui_preferences.py  test_app_factory_runtime.py  test_architecture_boundary.py  test_audit_log.py  test_auth.py  (+24 more)
(+443 files in other folders)
